Production/Production/src/objects/LiveAgentSession.object
<CustomObject>
    <fields>
        <fullName>TIme_Spent_Away_MS__c</fullName>
        <formula>TEXT(FLOOR ( TimeInAwayStatus /3600) )&amp;&apos;:&apos; &amp; TEXT( FLOOR( (MOD( TimeInAwayStatus ,3600))/60 ) ) &amp; &apos; :&apos; &amp; TEXT ( MOD(MOD( TimeInAwayStatus ,3600),60) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TIme Spent Away MS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Idle_MS__c</fullName>
        <formula>TEXT(FLOOR (TimeIdle/3600) )&amp;&apos;:&apos; &amp; TEXT( FLOOR( (MOD(TimeIdle,3600))/60 )  ) &amp; &apos; :&apos; &amp; TEXT ( MOD(MOD(TimeIdle,3600),60)  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Idle MS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Spent_In_Chats_MS__c</fullName>
        <formula>TEXT(FLOOR ( TimeInChats /3600) )&amp;&apos;:&apos; &amp; TEXT( FLOOR( (MOD( TimeInChats ,3600))/60 ) ) &amp; &apos; :&apos; &amp; TEXT ( MOD(MOD( TimeInChats ,3600),60) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Spent In Chats MS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Spent_Online_MS__c</fullName>
        <formula>TEXT(FLOOR ( TimeInOnlineStatus /3600) )&amp;&apos;:&apos; &amp; TEXT( FLOOR( (MOD( TimeInOnlineStatus ,3600))/60 ) ) &amp; &apos; :&apos; &amp; TEXT ( MOD(MOD( TimeInOnlineStatus ,3600),60) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Spent Online MS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Spent_at_Capacity_MS__c</fullName>
        <formula>TEXT(FLOOR (TimeAtCapacity/3600) )&amp;&apos;:&apos; &amp; TEXT( FLOOR( (MOD(TimeAtCapacity,3600))/60 ) ) &amp; &apos; :&apos; &amp; TEXT ( MOD(MOD(TimeAtCapacity,3600),60) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Spent at Capacity MS</label>
        <type>Text</type>
    </fields>
</CustomObject>